packages/jsii/test/negatives/neg.static-prop-name.2.ts
///!MATCH_ERROR: Method and property names must use camelCase: PROP

export class MyClass {
    static get PROP() {
        return 123;
    }
}
